fixed club toolbar routing + fixed calendar label too close together + added linechart of all costs over time to overview + cleaned up the rest of the charts

--- a/src/main/web/src/app/club-management/accounting/accounting-overview/accounting-overview.component.scss
+++ b/src/main/web/src/app/club-management/accounting/accounting-overview/accounting-overview.component.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	min-height: calc(100vh - 64px);
+	max-width: 1000px;
 	margin: auto;
 }
 
@@ -81,6 +82,36 @@
 	}
 }
 
+h3 {
+	margin: 0;
+	color: grey(800);
+	font-weight: 500;
+}
+
+.linechart-container {
+	overflow: hidden;
+
+
+	.chart-container {
+		position: relative;
+		flex: 1;
+		height: 200px;
+		display: block;
+		max-height: 200px;
+		min-height: 200px;
+
+		margin-left: 57px;
+		margin-bottom: 16px;
+		margin-top: 16px;
+		width: 100%;
+	}
+
+	/deep/ .line {
+		stroke-width: 3px !important;
+	}
+}
+
+
 .pie-chart {
 	display: flex;
 	flex-direction: column;
@@ -90,10 +121,45 @@
 	background: white;
 
 	.chart-container {
+		position: relative;
 		flex: 1;
+		height: 200px;
+		display: block;
+		max-height: 200px;
+		min-height: 200px;
 	}
 
 	.preview-header {
 		margin: 0;
 	}
+}
+
+:host /deep/ .ngx-charts {
+	position: absolute;
+	left: -50px;
+}
+
+:host /deep/ .chart-legend {
+	position: absolute;
+	right: 16px;
+	top: 16px;
+	width: 100px !important;
+
+	> div {
+		width: auto !important;
+	}
+
+	.legend-labels {
+		width: auto;
+		background: none;
+
+		li {
+			width: auto;
+			background: none;
+		}
+	}
+}
+
+:host /deep/ .chart-legend .legend-wrap {
+	width: 100%;
 }
